force-app/main/default/objects/Volunteer_Skills_and_Interests__c/Volunteer_Skills_and_Interests__c.object-meta.xml
<CustomObject>
    <description>What Skills and Interests a Volunteer might have.</description>
    <label>Volunteer Skills and Interests</label>
    <nameField>
        <displayFormat>VSI-{0000}</displayFormat>
        <label>Volunteer Skills and Interests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Skills and Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>