force-app/main/default/objects/Volunteer_Skills_and_Interests__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Skills and Interests</relationshipLabel>
    <relationshipName>Volunteer_Skills_and_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>