force-app/main/default/objects/Volunteer_Skills_and_Interests__c/fields/Corporation_Type__c.field-meta.xml
<CustomField>
    <fullName>Corporation_Type__c</fullName>
    <label>Corporation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Publicly Traded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>