force-app/main/default/objects/Volunteer_Skills_and_Interests__c/fields/Level_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Interest__c</fullName>
    <label>Level of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highest Interest Level</fullName>
            </value>
            <value>
                <fullName>High Interest Level</fullName>
            </value>
            <value>
                <fullName>Mid Interest Level</fullName>
            </value>
            <value>
                <fullName>Low Interest Level</fullName>
            </value>
            <value>
                <fullName>Lowest Interest Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>