force-app/main/default/objects/Volunteer_Skills_and_Interests__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Volunteer Skills and Interests</relationshipLabel>
    <relationshipName>Volunteer_Skills_and_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>