force-app/main/default/objects/Volunteer_Skills_and_Interests__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-reported</fullName>
            </value>
            <value>
                <fullName>Development officer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Research Tools</fullName>
                <isActive>false</isActive>
                <label>Research Tools</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>