force-app/main/default/objects/Volunteer_Skills_and_Interests__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TEXT(Volunteer_Skills_and_Interests_Listing__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>