force-app/main/default/objects/Volunteer_Skills_and_Interests__c/fields/Volunteer_Interests__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Interests__c</fullName>
    <label>Volunteer Interests</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit/Accounting</fullName>
            </value>
            <value>
                <fullName>Business/Management</fullName>
            </value>
            <value>
                <fullName>Community Involvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>