force-app/main/default/objects/Volunteer_Skills_and_Interests__c/fields/Volunteer_Skills_and_Interests_Listing__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Skills_and_Interests_Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Skills and Interests Listing</label>
    <referenceTo>Volunteer_Skills_and_Interests_Listing__c</referenceTo>
    <relationshipLabel>Volunteer Skills and Interests</relationshipLabel>
    <relationshipName>Volunteer_Skills_and_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>