force-app/main/default/objects/Volunteer_Skills_and_Interests__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Constituent__c</columns>
    <columns>Volunteer_Skills_and_Interests_Listing__c</columns>
    <columns>Type__c</columns>
    <columns>Notes__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Company_Size__c</columns>
    <columns>Corporation_Type__c</columns>
    <columns>Level_of_Interest__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>